Remove redundant gate creator methods